@startuml

title __CONTROLLER's Class Diagram__\n

  namespace com.deta.kopmart_backend {
    namespace controller {
      class com.deta.kopmart_backend.controller.CartController {
          + addToCart()
          + checkout()
          + deleteItem()
          + getCart()
          + mergeCart()
          + modifyItem()
      }
    }
  }
  

  namespace com.deta.kopmart_backend {
    namespace controller {
      class com.deta.kopmart_backend.controller.CategoryController {
          + showOne()
      }
    }
  }
  

  namespace com.deta.kopmart_backend {
    namespace controller {
      class com.deta.kopmart_backend.controller.OrderController {
          + cancel()
          + finish()
          + orderList()
          + show()
      }
    }
  }
  

  namespace com.deta.kopmart_backend {
    namespace controller {
      class com.deta.kopmart_backend.controller.ProductController {
          + create()
          + delete()
          + edit()
          + findAll()
          + findFourNewestProducts()
          + search()
          + showOne()
      }
    }
  }
  

  namespace com.deta.kopmart_backend {
    namespace controller {
      class com.deta.kopmart_backend.controller.UserController {
          ~ authenticationManager : AuthenticationManager
          + getProfile()
          + login()
          + save()
          + update()
      }
    }
  }
  

  com.deta.kopmart_backend.controller.CartController o-- com.deta.kopmart_backend.service.CartService : cartService
  com.deta.kopmart_backend.controller.CartController o-- com.deta.kopmart_backend.repository.ProductInOrderRepository : productInOrderRepository
  com.deta.kopmart_backend.controller.CartController o-- com.deta.kopmart_backend.service.ProductInOrderService : productInOrderService
  com.deta.kopmart_backend.controller.CartController o-- com.deta.kopmart_backend.service.ProductService : productService
  com.deta.kopmart_backend.controller.CartController o-- com.deta.kopmart_backend.service.UserService : userService
  com.deta.kopmart_backend.controller.CategoryController o-- com.deta.kopmart_backend.service.CategoryService : categoryService
  com.deta.kopmart_backend.controller.CategoryController o-- com.deta.kopmart_backend.service.ProductService : productService
  com.deta.kopmart_backend.controller.OrderController o-- com.deta.kopmart_backend.service.OrderService : orderService
  com.deta.kopmart_backend.controller.OrderController o-- com.deta.kopmart_backend.service.UserService : userService
  com.deta.kopmart_backend.controller.ProductController o-- com.deta.kopmart_backend.service.CategoryService : categoryService
  com.deta.kopmart_backend.controller.ProductController o-- com.deta.kopmart_backend.service.ProductService : productService
  com.deta.kopmart_backend.controller.UserController o-- com.deta.kopmart_backend.security.JWT.JwtProvider : jwtProvider
  com.deta.kopmart_backend.controller.UserController o-- com.deta.kopmart_backend.service.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
